dataset1235/2025-2/1153765216/users/1581346053/executions/2747719322_3921830315.log
== SUBMISSION (2025-08-21 19:20:24)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imp = round((valor * 0,34), 32
print(imp)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:23:13)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0.34),2) + valor)
print(imposto)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:33:04)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(round(total, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.85
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.85
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.95
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.99
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.56
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:32:20)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.5648
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:23:48)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0.34), 2) + valor)
print(imposto)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:23:43)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0.34), 2) + valor)
print(imposto)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2) + valor)
                                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:23:12)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0.34),2) + valor)
print(imposto)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:23:13)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0.34),2) + valor)
print(imposto)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:31:22)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(total, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.854 2
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.8462 2
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62 2
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.954 2
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.9877999999999 2
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.5648 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:22:02)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imp = round((valor * 0,34), 2) + valor)
print(imp)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:22:03)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imp = round((valor * 0,34), 2) + valor)
print(imp)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:20:25)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imp = round((valor * 0,34), 32
print(imp)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:20:53)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imp = round((valor*0,34), 32
print(imp)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imp = round((valor*0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imp = round((valor*0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imp = round((valor*0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imp = round((valor*0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imp = round((valor*0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imp = round((valor*0,34), 32
               ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:31:49)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.5648
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:22:04)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imp = round((valor * 0,34), 2) + valor)
print(imp)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 2) + valor)
                                          ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:30:46)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.5648
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:28:40)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0.34), 2))
total = valor + imposto
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:28:41)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0.34), 2))
total = valor + imposto
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:22:44)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0,34),2) + valor)
print(imposto)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0,34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0,34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0,34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0,34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0,34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0,34),2) + valor)
                                             ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:27:43)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0.34), 2))
print(imposto)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:20:05)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imp = round((valor * 0,34), 32

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imp = round((valor * 0,34), 32
               ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:28:39)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round((valor * 0.34), 2))
total = valor + imposto
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
-- ERROR:
File "XXXX", line 3
    imposto = round((valor * 0.34), 2))
                                      ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:31:23)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(total, 2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.854 2
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.8462 2
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62 2
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.954 2
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.9877999999999 2
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.5648 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:32:17)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.5648
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:32:19)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.5648
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 19:31:24)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(total, 2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.854 2
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.8462 2
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62 2
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.954 2
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.9877999999999 2
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.5648 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 19:30:44)
-- CODE: 
gasolina = float(input("quantidade de litros:"))
valor = 2.86 * gasolina + 50
imposto = round(valor * 0.34, 2)
total = valor + imposto
print(total)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.4
---- correct output:
106.86
---- user output:
quantidade de litros:106.854
-- TEST CASE 2:
---- input:
148.17
---- correct output:
634.85
---- user output:
quantidade de litros:634.8462
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
quantidade de litros:258.62
-- TEST CASE 4:
---- input:
87.4
---- correct output:
401.95
---- user output:
quantidade de litros:401.954
-- TEST CASE 5:
---- input:
238.23
---- correct output:
979.99
---- user output:
quantidade de litros:979.9877999999999
-- TEST CASE 6:
---- input:
42.68
---- correct output:
230.57
---- user output:
quantidade de litros:230.5648
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
